--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -378,7 +378,7 @@ As well, the `ToggleView` command can be queried for its current state.
 
 {productname} 6.3 adds a new feature that allows the default color for the icons in the foreground color and background color toolbar buttons to be pre-defined.
 
-The `color_default_foreground` and `color_default_background` colors are pre-defined by including them in `tinymce.init`
+The `color_default_foreground` and `color_default_background` colors are options that take strings.
 
 In the example below, the foreground color is set to red and the background color is set to a shade of cyan.
 
