--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -317,9 +317,9 @@ As a consequence, when either the Text color or Background color toolbar menus a
 
 {productname} 6.3 introduced two new API functions that allow a user to select a word from the insertion point location which applies a new expand feature.
 
-This new `tinymce.selection.expand` API function allows {productname} users and developers to expand the selection range to contain the entire word when the selection is collapsed within the word.
+The `tinymce.selection.expand` API function allows {productname} users and developers to expand the selection range to contain the entire word when the selection is collapsed within the word.
 
-To support this new API function, {productname} 6.3 also introduced `tinymce.dom.RangeUtils`, which focuses on a new `expand` method range that expands around the entire word that the user selection was collapsed within by the `tinymce.selection` API function.
+The `tinymce.selection.expand` method expands the selection over the entire selected word, while the `tinymce.dom.RangeUtils.expand` method returns a range expanded over an entire selected word.
 
 These new API functions are implemented to improve the selection of whole words in the Comments plugin. If, in the following example, a user places the insertion point between the first and second `m` in the word, `comment`, then clicks the _Add comment_ toolbar button, or selects _Insert > Add comment_ from the TinyMCE menu, or presses the _Add comment_ keyboard shortcut (eg ⌘+⌥+M) — 
 
