DOC-1754: Advanced Typography plugin documentation 2 (#2578)
* DOC-1754: advanced-typography.adoc; available-menu-items.adoc, available-toolbar-buttons.adoc, nav.adoc

1. added `advanced-typography.adoc` skeleton to `/modules/ROOT/pages/`.
2. added `advanced-typography-adoc` draft to `/modules/ROOT/partials/configuration/`.
3. added Advanced Typography entry to `/modules/ROOT/pages/available-menu-items.adoc`.
4. added Advanced Typography entry to `/modules/ROOT/pages/available-toolbar-buttons.adoc`.
5. Added xref entry pointing to `advanced-typography.adoc` to `nav.adoc`.

* DOC-1754: advanced-typography.adoc

Actually added `/modules/ROOT/partials/configuraiton/advanced-typography.adoc` draft this time.

* DOC-1754: adding this-is-not-working files temporarily so they will render on github

* DOC-1754: removed this-is-not-working files.

* DOC-1754: advanced-typography.adoc; /partials/configuration/advanced-typography.adoc; /typography/

1. Edits to advanced-typograhpy.adoc.
2. Syntax corrections of examples in /partials/configuration/advanced-typography.adoc.
3. Explanatory text added to examples.
4. /typography/ added to /examples/. And `index.js` and `index.html` added to /typography/.

* DOC-1754: /ROOT/examples/live-demos/typography/index.html

Changed textarea id attribute from typography to advanced-typography.

* DOC-1754: /ROOT/examples/live-demos/typography/index.js

Corrected index.js in hopes this fixes the interactive example not loading in rendered page.

* DOC-1754: /ROOT/examples/live-demos/typography/index.html

Edits to text and wrapped the editorial note in em tags.

* DOC-1754: /partials/configuration/advanced-typography.adoc

Addded question re `typography_custom_rules` as commented text.

* DOC-1754: /modules/ROOT/examples/live-demos/typography/index.html

Re-wrote the instructional text in the advanced typography plugin interactive example.

* DOC-1754: /ROOT/examples/live-demos/typography/index.html

--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -37,6 +37,12 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 :plugincode: advtable
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Advanced Typography
+:plugincode: typography
+:pluginpage: advanced-typography.adoc
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Anchor
 :plugincode: anchor
