DOC-1886: /partials/configuration/advlist_bullet_styles.adoc
Corrected documented default values:
-*Default value:* `+'default,circle,disc,square'+`
+*Default value:* `+'default,circle,square'+`

Also a copy-edit: s/browser’s/browser’s/.

--- a/modules/ROOT/partials/configuration/advlist_bullet_styles.adoc
+++ b/modules/ROOT/partials/configuration/advlist_bullet_styles.adoc
@@ -5,11 +5,11 @@ This option allows you to include specific unordered list item markers in the de
 
 *Type:* `+String+`
 
-*Default value:* `+'default,circle,disc,square'+`
+*Default value:* `+'default,circle,square'+`
 
 *Possible values:*
 
-* `+default+`: the browser's default style
+* `+default+`: the browser’s default style
 * `+circle+`: a hollow circle
 * `+disc+`: a filled circle
 * `+square+`: a filled square
