DOC-1877: partials/events/inlinecss-events.adoc
Typo correction in xref:
-provided by the xref:inlince-css.adoc
+provided by the xref:inline-css.adoc

--- a/modules/ROOT/partials/events/inlinecss-events.adoc
+++ b/modules/ROOT/partials/events/inlinecss-events.adoc
@@ -1,4 +1,4 @@
-The following events are provided by the xref:inlince-css.adoc[Inline CSS plugin].
+The following events are provided by the xref:inline-css.adoc[Inline CSS plugin].
 
 [cols="1,1,2",options="header"]
 |===
