--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -23,6 +23,12 @@ Add advanced functionality to tables.
 
 a|
 [.lead]
+xref:advanced-typography.adoc[Advanced Typography]
+
+Replace common typewriter-style characters with their professional typesetter equivalents.
+
+a|
+[.lead]
 xref:casechange.adoc[Case Change]
 
 Change the case of text.
@@ -68,6 +74,12 @@ a|
 xref:formatpainter.adoc[Format Painter]
 
 Quickly apply formats to multiple pieces of text.
+
+a|
+[.lead]
+xref:inline-css.adoc[Inline CSS]
+
+Turn {productname} documents into single files with inline CSS, ready, in particular for sending as HTML-formatted emails.
 
 a|
 [.lead]
