DOC-1877: partials/misc/premium-plugin-list.adoc
Added missing Premium plugins — Advanced Typography, Inline CSS, and MoxieManager — to re-used list of same.

--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -1,6 +1,7 @@
 * xref:a11ychecker.adoc[Accessibility Checker]
 * xref:advcode.adoc[Advanced Code Editor]
 * xref:advtable.adoc[Advanced Tables]
+* xref:advanced-typography.adoc[Advanced Typography]
 * xref:casechange.adoc[Case Change]
 * xref:checklist.adoc[Checklist]
 * xref:introduction-to-tiny-comments.adoc[Comments]
@@ -9,9 +10,11 @@
 * xref:export.adoc[Export]
 * xref:footnotes.adoc[Footnotes]
 * xref:formatpainter.adoc[Format Painter]
+* xref:inline-css.adoc[Inline CSS]
 * xref:linkchecker.adoc[Link Checker]
 * xref:mentions.adoc[Mentions]
 * xref:mergetags.adoc[Merge Tags]
+* xref:moxiemanager.adoc[MoxieManager]
 ifeval::["{productSource}" != "cloud"]
 * xref:moxiemanager.adoc[MoxieManager]
 endif::[]
