DOC-1877: editor-and-features.adoc
Typographical copy-edit: s/‘/’/.

--- a/modules/ROOT/pages/editor-and-features.adoc
+++ b/modules/ROOT/pages/editor-and-features.adoc
@@ -45,7 +45,7 @@ There are more than 40 open source plugins that enhance the editing experience i
 
 === Step 3: Specifying purchased TinyMCE plugins and toolbar/menu items
 
-NOTE: It may take up to 30 minutes for the purchased plugin to be available to {productname}. Clear the browser's cache.
+NOTE: It may take up to 30 minutes for the purchased plugin to be available to {productname}. Clear the browser’s cache.
 
 Extend the xref:basic-setup.adoc[{productname} configuration] to include any additional purchased plugins and associated toolbar and menu items. Refer to the following enablement guides for more information:
 
