DOC-1877: partials/index-pages/premium-plugins.adoc
Added empty (aka dummy) table cell markup to end of table of premium plugins.

Also added comments documenting when this empty cell mark-up should be either commented out or set to render, so as to ensure all table cells above render.

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -153,4 +153,13 @@ xref:tinydrive-introduction.adoc[Tiny Drive]
 
 Cloud-based file and image management for {productname}.
 
+// Dummy table cell.
+// 1. Remove the inline comment markup pre-pending this
+//    element when the number of cells in the table is
+//    odd.
+// 2. Prepend the inline comment markup to this element
+//    when the number of cells in the table is even.
+a|
+
 |===
+
