DOC-1877: partials/index-pages/opensource-plugins.adoc
Added comments documenting when the empty cell mark-up should be either commented out or set to render, so as to ensure all table cells above render.

--- a/modules/ROOT/partials/index-pages/opensource-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/opensource-plugins.adoc
@@ -177,6 +177,13 @@ xref:wordcount.adoc[Word Count]
 
 Show a word count in the {productname} status bar.
 
+// Dummy table cell.
+// 1. Remove the inline comment markup pre-pending this
+//    element when the number of cells in the table is
+//    odd.
+// 2. Prepend the inline comment markup to this element
+//    when the number of cells in the table is even.
 a|
 
 |===
+
