--- a/modules/ROOT/pages/apis/tinymce.env.adoc
+++ b/modules/ROOT/pages/apis/tinymce.env.adoc
@@ -28,7 +28,7 @@ This class contains various environment constants like browser versions etc. Nor
 |===
 |Name|Summary|Defined by
 |xref:#browser.isChromium[browser.isChromium()]|Returns `true` if the user's browser is Chromium based, such as Google Chrome or newer versions of Microsoft Edge.|`xref:apis/tinymce.env.adoc[Env]`
-|xref:#browser.isEdge[browser.isEdge()]|Returns `true` if the user's browser is Microsoft Edge.|`xref:apis/tinymce.env.adoc[Env]`
+|xref:#browser.isEdge[browser.isEdge()]|Returns `true` if the user's browser is Microsoft Edge Legacy. Does not return true for the newer Chromium-based Microsoft Edge.|`xref:apis/tinymce.env.adoc[Env]`
 |xref:#browser.isFirefox[browser.isFirefox()]|Returns `true` if the user's browser is Firefox.|`xref:apis/tinymce.env.adoc[Env]`
 |xref:#browser.isIE[browser.isIE()]|Returns `true` if the user's browser is Microsoft Internet Explorer.|`xref:apis/tinymce.env.adoc[Env]`
 |xref:#browser.isOpera[browser.isOpera()]|Returns `true` if the user's browser is Opera.|`xref:apis/tinymce.env.adoc[Env]`
@@ -73,11 +73,11 @@ Returns `true` if the user's browser is Chromium based, such as Google Chrome or
 ----
 browser.isEdge(): Boolean
 ----
-Returns `true` if the user's browser is Microsoft Edge.
+Returns `true` if the user's browser is Microsoft Edge Legacy. Does not return true for the newer Chromium-based Microsoft Edge.
 
 ==== Return value
 
-* `Boolean` - Returns `true` if the user's browser is Microsoft Edge.
+* `Boolean` - Returns `true` if the user's browser is Microsoft Edge Legacy.
 
 '''
 
